fixed alignment

--- a/crm-david-yelin/src/styles/Profile.css
+++ b/crm-david-yelin/src/styles/Profile.css
@@ -175,4 +175,5 @@ div .profile-avatar:hover {
 .contact-src-log {
   display: flex;
   gap: 0.8rem;
+  align-items: center;
 }
